# IntelliSat

./: CMakeLists.txt  CMakePresets.json  cubeide-gcc.cmake
Src/: main.c
Src/loggers/: CMakeLists.txt  downlink_logs.c  downlink_logs.h  event_logger.c  event_logger.h  experiment_logger.c  experiment_logger.h  fits_in_bits.c  fits_in_bits.h  logger_to_flash.c  logger_to_flash.h  loggers_main.c
Src/loggers/mockup_flash/: flash_driver.h  logger_to_flash.c  logger_to_flash.h  mock_flash_driver.c
Src/system_config/RTC/: rtc.h
